--- a/angular.json
+++ b/angular.json
@@ -77,6 +77,9 @@
               "browserTarget": "app-angular:build:development"
             }
           },
+          "options": {
+             "proxyConfig": "src/proxy.conf.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
